--- a/views_migration.info.yml
+++ b/views_migration.info.yml
@@ -6,4 +6,5 @@ core_version_requirement: ^8.8 || ^9.0
 dependencies:
   - drupal:views
   - drupal:migrate
+  - drupal:migrate_drupal
   - migrate_plus:migrate_plus
